--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "gatsby": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
