--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
