--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "gatsby": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "postcss": "^8.4.49",
