--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^6.5.0",
+    "@mui/styled-engine-sc": "^7.2.0",
+    "@mui/x-tree-view": "^8.8.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -30,6 +32,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^8.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^3.4.14",
     "xml-js": "^1.6.11"
   },
